syntax = "proto3";
package gkeystoreproto;
option go_package = "github.com/lasthyphen/dijigo/api/keystore/gkeystore/gkeystoreproto";

message GetDatabaseRequest {
    string username = 1;
    string password = 2;
}

message GetDatabaseResponse {
    uint32 db_server = 1;
}

service Keystore {
    rpc GetDatabase(GetDatabaseRequest) returns (GetDatabaseResponse);
}
